--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="purple_200">#FFBB86FC</color>
-	<color name="purple_500">#FF6200EE</color>
-	<color name="purple_700">#FF3700B3</color>
-	<color name="teal_200">#FF03DAC5</color>
-	<color name="teal_700">#FF018786</color>
-	<color name="black">#FF000000</color>
-	<color name="white">#FFFFFFFF</color>
+	<!-- button -->
+	<color name="btn_text">#63ACE5</color><!--4B86B4-->
+
+	<!-- welcome view -->
+	<color name="wc_text">#4D648D</color>
+	<!-- Screens background color-->
+	<color name="wc_bg_screen">#FED766</color>
+	<!-- dots active colors -->
+	<array name="array_dot_active">
+		<item>#8cf9eb</item>
+	</array>
+	<!-- dots inactive colors -->
+	<array name="array_dot_inactive">
+		<item>#2278d4</item>
+	</array>
+
+	<!-- game view-->
+	<color name="game_flash_bg">#f6cd61</color>
 </resources>
