--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,54 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 	<!-- Base application theme. -->
-	<style name="Theme.Bird" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+	<style name="Theme.Bird" parent="Theme.MaterialComponents.NoActionBar">
+		<item name="android:windowNoTitle">true</item>
+		<item name="android:windowActionBar">false</item>
+		<item name="android:windowFullscreen">true</item>
+		<item name="android:windowContentOverlay">@null</item>
+
 		<!-- Primary brand color. -->
-		<item name="colorPrimary">@color/purple_500</item>
-		<item name="colorPrimaryVariant">@color/purple_700</item>
-		<item name="colorOnPrimary">@color/white</item>
+		<item name="colorPrimary">@color/x_light_gray</item>
+		<!--<item name="colorPrimaryVariant">@color/purple_700</item>-->
+		<!--<item name="colorOnPrimary">@android:color/white</item>-->
 		<!-- Secondary brand color. -->
-		<item name="colorSecondary">@color/teal_200</item>
-		<item name="colorSecondaryVariant">@color/teal_700</item>
-		<item name="colorOnSecondary">@color/black</item>
+		<!--<item name="colorSecondary">@color/teal_200</item>-->
+		<!--<item name="colorSecondaryVariant">@color/teal_700</item>-->
+		<!--<item name="colorOnSecondary">@color/black</item>-->
 		<!-- Status bar color. -->
-		<item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+		<!--<item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>-->
+
 		<!-- Customize your theme here. -->
+		<item name="fontFamily">@font/main</item>
+		<item name="android:fontFamily">@font/main</item>
+		<item name="android:textColor">@color/x_dark_gray</item>
+		<item name="colorAccent">@color/x_dark_gray</item>
+
+		<item name="buttonStyle">@style/Widget.AppCompat.Button.Borderless.Colored</item>
+
+		<!-- Style to use for Snackbars in this theme. -->
+		<item name="snackbarStyle">@style/Widget.MaterialComponents.Snackbar</item>
+
+		<item name="android:popupBackground">@drawable/popup_frame</item>
+
+		<!-- XT defined -->
+
+		<!-- button -->
+		<item name="buttonLayout">style2</item>
+		<item name="buttonHeight">70</item>
+
+		<item name="buttonBackground">@drawable/button_bg</item>
+		<item name="buttonTextColor">@color/button_text</item>
+		<item name="buttonPrimary1Background">@drawable/button_primary_1_bg</item>
+		<item name="buttonPrimary1TextColor">@android:color/white</item>
+		<item name="buttonCornerRadiusRatio">0.5</item>
+		<item name="buttonShadowRadius">3</item>
+		<item name="buttonShadowColor">#1492FF</item>
+
+		<!-- popup -->
+		<item name="popupStyle">style2</item>
+
+		<item name="popupCornerRadiusRatio">0.03</item>
+		<item name="popupShadowRadius">20</item>
+		<item name="popupShadowColor">#000000</item>
 	</style>
 </resources>
