--- a/app/src/main/res/layout/dev.xml
+++ b/app/src/main/res/layout/dev.xml
@@ -116,6 +116,46 @@
 						android:textColor="@android:color/white"
 						tools:ignore="HardcodedText" />
 				</LinearLayout>
+
+				<LinearLayout
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_margin="7dp"
+					android:background="@color/btn_bg"
+					android:orientation="horizontal">
+
+					<EditText
+						android:id="@+id/input_gl_viewport_width"
+						android:layout_width="0dp"
+						android:layout_height="match_parent"
+						android:layout_margin="7dp"
+						android:layout_weight="1"
+						android:autofillHints="level"
+						android:hint="level"
+						android:inputType="number"
+						tools:ignore="HardcodedText" />
+
+					<EditText
+						android:id="@+id/input_gl_viewport_height"
+						android:layout_width="0dp"
+						android:layout_height="match_parent"
+						android:layout_margin="7dp"
+						android:layout_weight="1"
+						android:autofillHints="level"
+						android:hint="level"
+						android:inputType="number"
+						tools:ignore="HardcodedText" />
+
+					<Button
+						android:id="@+id/btn_set_gl_viewport_size"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_margin="7dp"
+						android:layout_weight="1"
+						android:text="SET"
+						android:textColor="@android:color/white"
+						tools:ignore="HardcodedText" />
+				</LinearLayout>
 			</LinearLayout>
 		</ScrollView>
 	</x.common.ui.PopupWindow>
