--- a/app/src/main/res/values/games-ids.xml
+++ b/app/src/main/res/values/games-ids.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?><!--Google Play game services IDs. Save this file as res/values/games-ids.xml in your project.-->
 <resources>
 	<!--app_id-->
-	<string name="app_id" translatable="false">0</string>
+	<string name="app_id" translatable="false">61308247799</string>
 	<!--package_name-->
 	<string name="package_name" translatable="false">x.game.bird</string>
-
-	<string name="leaderboard_all_players" translatable="false">x</string>
-	<string name="medal_aluminum" translatable="false">x</string>
-	<string name="medal_bronze" translatable="false">x</string>
-	<string name="medal_silver" translatable="false">x</string>
-	<string name="medal_gold" translatable="false">x</string>
-	<string name="score_100" translatable="false">x</string>
+	<!--achievement Aluminum Medal-->
+	<string name="achievement_aluminum_medal" translatable="false">CgkI972GsuQBEAIQAg</string>
+	<!--achievement Bronze Medal-->
+	<string name="achievement_bronze_medal" translatable="false">CgkI972GsuQBEAIQAQ</string>
+	<!--achievement Silver Medal-->
+	<string name="achievement_silver_medal" translatable="false">CgkI972GsuQBEAIQAw</string>
+	<!--achievement Gold Medal-->
+	<string name="achievement_gold_medal" translatable="false">CgkI972GsuQBEAIQBA</string>
+	<!--achievement Score 1000-->
+	<string name="achievement_score_1000" translatable="false">CgkI972GsuQBEAIQBQ</string>
+	<!--leaderboard All Players-->
+	<string name="leaderboard_all_players" translatable="false">CgkI972GsuQBEAIQBg</string>
 </resources>
